--- a/ChangeLog
+++ b/ChangeLog
@@ -21,3 +21,4 @@ William Olson
  - Fixed false positives on epicurious
  - Style tweaking on options page
  - Made option discriptions clearer
+ - Added support for food.com
