Added support for Food Network.

--- a/ChangeLog
+++ b/ChangeLog
@@ -34,3 +34,7 @@ William Olson
  -Added support for BBC Food
  -Added support for Gourmet Magazine
  -Added support for BBC Good Food
+
+* 1.7 11/07/2010
+ -Created fix for Macs!
+ -Added support for Food Network.
