--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 ﻿gRecipe Change log
-William Olson
+William Olson <wtolson@gmail.com>
  
 * 1.0  9/24/2010
  - Initial Release
@@ -39,3 +39,7 @@ William Olson
  -Created fix for Macs!
  -Added support for Food Network.
  -Added support for CHOW.
+
+* 1.8 11/08/2010
+ -Added support for The Pioneering Woman. (Via Joe)
+ -Via link now points to recipe page. (Also via Joe)
