Updated change log and version number to 1.8.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -43,3 +43,6 @@ William Olson <wtolson@gmail.com>
 * 1.8 11/08/2010
  -Added support for The Pioneering Woman. (Via Joe)
  -Via link now points to recipe page. (Also via Joe)
+
+* 1.8.1 11/09/2010
+ -Formating update for Food Network.
